# seL4-cortex-m-userland

./: .gitmodules  CMakeLists.txt  flash-rp2350.sh  gdb-rp2350.sh  init.sh  openocd-rp2350.sh  sim-mps2-an386-fvp.sh  sim-mps2-an386-qemu.sh  sim-mps2-an521-fvp.sh  sim-mps2-an521-qemu.sh
userland/: CMakeLists.txt  userland_image.py
userland/roottask/: CMakeLists.txt  crt0.S  linker.ld  main.c  memory.ld  uart.c
